[gd_scene load_steps=7 format=1]

[ext_resource path="res://src/world/root.gd" type="Script" id=1]
[ext_resource path="res://art/medium/tiles.xml" type="TileSet" id=2]
[ext_resource path="res://src/world/debug.gd" type="Script" id=3]
[ext_resource path="res://src/world/map.gd" type="Script" id=4]
[ext_resource path="res://src/world/camera.gd" type="Script" id=5]
[ext_resource path="res://src/world/hud.tscn" type="PackedScene" id=6]

[node name="world" type="Node2D"]

script/script = ExtResource( 1 )
show_debug = true

[node name="map" type="TileMap" parent="."]

visibility/behind_parent = true
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 19, 0, 65536, 0, 65555, 0, 131072, 0, 131091, 0, 196608, 0, 196627, 0, 262144, 0, 262163, 0, 327680, 0, 327699, 0, 393216, 0, 393235, 0, 458752, 0, 458771, 0, 524288, 0, 524307, 0, 589824, 0, 589843, 0, 655360, 0, 655379, 0, 720896, 0, 720915, 0, 786432, 0, 786451, 0, 851968, 0, 851987, 0, 917504, 0, 917505, 8, 917506, 9, 917507, 8, 917508, 8, 917509, 9, 917510, 8, 917511, 9, 917512, 8, 917513, 8, 917514, 9, 917515, 8, 917516, 9, 917517, 8, 917518, 8, 917519, 8, 917520, 8, 917521, 9, 917522, 9, 917523, 0, 1179674, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="foods" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="snakes" type="Node2D" parent="."]

__meta__ = {
"_edit_lock_": true
}

[node name="snake_spawn_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="debug" type="Node2D" parent="."]

script/script = ExtResource( 3 )

[node name="foreground" type="TileMap" parent="."]

editor/display_folded = true
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )
__meta__ = {
"_edit_lock_": true
}

[node name="fg1" type="TileMap" parent="foreground"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )
__meta__ = {
"_edit_lock_": true
}

[node name="fg2" type="TileMap" parent="foreground"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )
__meta__ = {
"_edit_lock_": true
}

[node name="fg3" type="TileMap" parent="foreground"]

mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )
__meta__ = {
"_edit_lock_": true
}

[node name="walls" type="TileMap" parent="."]

visibility/behind_parent = true
z/z = 1
mode = 0
tile_set = ExtResource( 2 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray(  )
script/script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="camera" type="Camera2D" parent="."]

anchor_mode = 0
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 5 )

[node name="hud" parent="." instance=ExtResource( 6 )]

[node name="tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="timeout" from="snake_spawn_timer" to="." method="_on_snake_spawn_timer_timeout"]

[connection signal="tween_complete" from="tween" to="." method="_on_tween_tween_complete"]


